feat: Toast 애니메이션, 모달창, Vuex 적용 및 코드 리팩토링
### 주요 변경 사항

1️⃣ **Toast 애니메이션 적용**
   - `transition-group`을 이용한 애니메이션 적용.
   - 상태 변화에 따라 자연스럽게 나타나고 사라지는 효과 추가.

2️⃣ **모달창 컴포넌트화 및 To-Do 삭제 기능 구현**
   - `Modal.vue` 컴포넌트를 생성하여 재사용 가능한 모달 컴포넌트 구현.
   - `Teleport`를 이용해 모달창을 DOM의 최상위로 이동시켜 위치와 관계없이 동작하도록 설정.
   - `DeleteModal.vue`를 만들어 모달을 이용한 To-Do 삭제 기능 추가.

3️⃣ **리스트 컴포넌트 리팩토링**
   - `slot`, `scoped slot`을 활용하여 `TodoList.vue`를 더 유연하게 개선.
   - `List.vue`로 리스트 컴포넌트 분리하여 재사용 가능하도록 리팩토링.

4️⃣ **컴포넌트에서 v-model 적용**
   - `v-model`을 사용하여 부모-자식 간 데이터 바인딩을 효율적으로 처리.

5️⃣ **Vuex 적용 및 상태 관리 개선**
   - `store/index.js`에 Vuex 설정 적용.
   - `mutations`, `actions`, `getters`를 활용한 상태 관리 구조화.
   - `modules` 디렉터리를 만들어 Vuex 모듈화 진행 (ex: `store/modules/toast`).
   - `Toast` 기능을 Vuex를 통해 전역 관리하도록 변경.

6️⃣ **Axios 기본 URL 설정 및 API 호출 개선**
   - `axios.js`를 생성하여 `baseURL`을 설정하고 API 호출을 간소화.
   - 모든 API 호출을 `axios.js`에서 관리하도록 변경.

7️⃣ **Pagination 및 Navbar 컴포넌트화**
   - `Pagination.vue`를 생성하여 페이지네이션 기능을 분리.
   - `Navbar.vue`를 별도로 분리하여 전역 내비게이션 적용.

8️⃣ **useContext 제거 및 코드 최신화**
   - `useContext()`는 현재 deprecated 되었으므로 제거 후 `setup()` 내에서 `emit`을 직접 사용하도록 수정.

--- a/vue3-project/public/index.html
+++ b/vue3-project/public/index.html
@@ -19,9 +19,11 @@
         continue.</strong
       >
     </noscript>
-    <div id="app">
-      <!-- vue 어플래케이션이 구동 됨. -->
-    </div>
+    <!-- vue 어플래케이션이 구동 됨. -->
+    <div id="app"></div>
+    <!-- modal,Toast 등과 같이 항상 최상위에 위치해야하는 창의 경우 스타일이 부모 상속을 받기 때문에
+     teleport를 해주면 자식이어도 영향을 받지 않는다. -->
+    <div id="modal"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
